[gd_scene load_steps=29 format=3 uid="uid://cyhhb83y3llyw"]

[ext_resource type="Texture2D" uid="uid://gajk7gy5bqcg" path="res://assets/male_hero.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://3yeymuabg5wp" path="res://player/player.gd" id="1_yw30f"]
[ext_resource type="Texture2D" uid="uid://beqoigo2xkgj5" path="res://assets/qbit_frame.png" id="2_ebec5"]
[ext_resource type="Script" uid="uid://dmj4ugw4gras" path="res://player/player_states/idle.gd" id="3_qjkh3"]
[ext_resource type="Script" uid="uid://b6qsjf0cf8igd" path="res://player/player_states/run.gd" id="4_g6k8r"]
[ext_resource type="Script" uid="uid://bar08vod07yfd" path="res://player/player_states/jump.gd" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://1qkioml8ywpu" path="res://player/player_states/fall.gd" id="6_boad6"]
[ext_resource type="Script" uid="uid://bi4itbbtkiu24" path="res://player/player_states/dash.gd" id="7_boad6"]
[ext_resource type="Script" uid="uid://b4b42jj6vo1n" path="res://player/player_states/wall_slide.gd" id="7_hg6s5"]
[ext_resource type="Script" uid="uid://caw38gcbsdct" path="res://player/player_states/wall_jump.gd" id="8_8t03j"]
[ext_resource type="Script" uid="uid://bs26yf1yr4alc" path="res://player/up_dash.gd" id="10_8t03j"]
[ext_resource type="PackedScene" uid="uid://drqcvrd6x5tkm" path="res://input_hint/input_hint.tscn" id="11_2ieo8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ebec5"]
radius = 5.0

[sub_resource type="Animation" id="Animation_yw30f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "dash"
length = 0.416675
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [115, 116, 117, 118, 119]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "fall"
length = 0.3333417
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [253, 254, 255, 256]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "idle"
length = 0.75000834
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.4166667, 0.5, 0.5833334, 0.66667503),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28, 29, 30, 32]
}

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "jump"
length = 0.50000834
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.4166667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [230, 231, 232, 233, 234, 235]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "run"
length = 0.8333417
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.4166667, 0.5, 0.5833334, 0.6666667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [138, 139, 140, 141, 142, 143, 144, 145, 146, 147]
}

[sub_resource type="Animation" id="Animation_2ieo8"]
resource_name = "run_to_idle"
length = 0.58334166
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.4166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [184, 185, 186, 187, 188, 189, 190]
}

[sub_resource type="Animation" id="Animation_ebec5"]
resource_name = "run_turn"
length = 0.3333417
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [161, 162, 163, 164]
}

[sub_resource type="Animation" id="Animation_yllr7"]
resource_name = "up_dash"
length = 0.58334166
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334, 0.4166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [552, 553, 555, 556, 557, 558, 559]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerStates/UpDash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_up_dash_speed"
}]
}

[sub_resource type="Animation" id="Animation_8t03j"]
resource_name = "wall_jump"
length = 0.3333417
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [322, 323, 324, 325]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "wall_slide"
length = 0.3333417
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [299, 300, 301, 302]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgyib"]
_data = {
&"RESET": SubResource("Animation_yw30f"),
&"dash": SubResource("Animation_rgyib"),
&"fall": SubResource("Animation_boad6"),
&"idle": SubResource("Animation_g1dw6"),
&"jump": SubResource("Animation_g6k8r"),
&"run": SubResource("Animation_qjkh3"),
&"run_to_idle": SubResource("Animation_2ieo8"),
&"run_turn": SubResource("Animation_ebec5"),
&"up_dash": SubResource("Animation_yllr7"),
&"wall_jump": SubResource("Animation_8t03j"),
&"wall_slide": SubResource("Animation_hg6s5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boad6"]
size = Vector2(1, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgyib"]
size = Vector2(1, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hg6s5"]
size = Vector2(6, 1)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 20
collision_layer = 16
safe_margin = 0.14
script = ExtResource("1_yw30f")

[node name="Qbit" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_ebec5")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("1_oul6g")
hframes = 23
vframes = 25
frame = 23

[node name="PickupAnchor" type="Marker2D" parent="Sprite2D"]
unique_name_in_owner = true

[node name="EyeLine" type="Marker2D" parent="Sprite2D"]
position = Vector2(2, -9)

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, -15.5)
shape = SubResource("CapsuleShape2D_ebec5")
debug_color = Color(0, 0.6, 0.69803923, 0.12156863)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rgyib")
}
autoplay = "idle"

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -25)
process_callback = 0
limit_left = -132
limit_top = -96
limit_right = 384
limit_bottom = 416
position_smoothing_enabled = true

[node name="ShapeCastWallRight" type="ShapeCast2D" parent="."]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(5, -15)
shape = SubResource("RectangleShape2D_boad6")
target_position = Vector2(3, 0)
max_results = 3

[node name="ShapeCastWallLeft" type="ShapeCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-5, -15)
shape = SubResource("RectangleShape2D_rgyib")
target_position = Vector2(-3, 0)
max_results = 3

[node name="ShapeCastOneWayPlatform" type="ShapeCast2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_hg6s5")
target_position = Vector2(0, 3)
max_results = 8

[node name="DashCooldown" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="PlayerStates" type="Node" parent="."]
unique_name_in_owner = true

[node name="Idle" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("3_qjkh3")

[node name="Run" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("4_g6k8r")

[node name="Jump" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("5_g6k8r")

[node name="Fall" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("6_boad6")

[node name="WallSlide" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("7_hg6s5")

[node name="WallJump" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("8_8t03j")

[node name="Dash" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("7_boad6")

[node name="UpDash" type="Node" parent="PlayerStates"]
unique_name_in_owner = true
script = ExtResource("10_8t03j")

[node name="InputHint" parent="." instance=ExtResource("11_2ieo8")]
position = Vector2(0, -36)
